add classes and tests for make infrastructure

--- a/src/oof/element/Makefile
+++ b/src/oof/element/Makefile
@@ -1,5 +1,12 @@
 # $Id$
 
+CLASSES += Break Code DivisionEnd Division DivisionStart Element
+CLASSES += ELEMENT Email Emphasis Endable END Fieldset FormEnd
+CLASSES += Form FormStart Header HorizontalRuler Image Input
+CLASSES += Link ListEnd ListItem List ListStart Paragraph
+CLASSES += Preformatted Span Startable START Strong TableEnd
+CLASSES += Table TableRow TableStart
+
 SYSROOT = ../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
