--- a/src/oof/element/Makefile
+++ b/src/oof/element/Makefile
@@ -1,11 +1,14 @@
 # $Id$
 
-CLASSES += Break Code DivisionEnd Division DivisionStart Element
-CLASSES += ELEMENT Email Emphasis Endable END Fieldset FormEnd
-CLASSES += Form FormStart Header HorizontalRuler Image Input
-CLASSES += Link ListEnd ListItem List ListStart Paragraph
-CLASSES += Preformatted Span Startable START Strong TableEnd
-CLASSES += Table TableRow TableStart
+CLASSES += Break.class Code.class DivisionEnd.class Division.class
+CLASSES += DivisionStart.class Element.class ELEMENT.class Email.class
+CLASSES += Emphasis.class Endable.class END.class Fieldset.class
+CLASSES += FormEnd.class Form.class FormStart.class Header.class
+CLASSES += HorizontalRuler.class Image.class Input.class Link.class
+CLASSES += ListEnd.class ListItem.class List.class ListStart.class
+CLASSES += Paragraph.class Preformatted.class Span.class Startable.class
+CLASSES += START.class Strong.class TableEnd.class Table.class
+CLASSES += TableRow.class TableStart.class
 
 SYSROOT = ../../..
 
