GridJob.class added

--- a/src/gridfe/gridint/Makefile
+++ b/src/gridfe/gridint/Makefile
@@ -1,6 +1,6 @@
 # $Id$
 
-CLASSES += GramInt.class GridInt.class RSLElement.class
+CLASSES += GridJob.class GramInt.class GridInt.class RSLElement.class
 
 SYSROOT = ../..
 
