--- a/src/oof/element/Makefile
+++ b/src/oof/element/Makefile
@@ -7,8 +7,8 @@ CLASSES += FormEnd.class Form.class FormStart.class Header.class
 CLASSES += HorizontalRuler.class Image.class Input.class Link.class
 CLASSES += ListEnd.class ListItem.class List.class ListStart.class
 CLASSES += Paragraph.class Preformatted.class Span.class Startable.class
-CLASSES += START.class Strong.class TableEnd.class Table.class
-CLASSES += TableRow.class TableStart.class
+CLASSES += START.class Strong.class Table.class TableCell.class
+CLASSES += TableEnd.class TableRow.class TableStart.class
 
 SYSROOT = ../../..
 
