plug into main.mk

--- a/tools/jdep/Makefile
+++ b/tools/jdep/Makefile
@@ -1,22 +1,13 @@
 # $Id$
 
+SYSROOT = ../..
 TARGET = jdep
 OBJS = jdep.o q.o xalloc.o lbuf.o
-SRCS = jdep.c q.c xalloc.c lbuf.c
-CFLAGS = -Wall -g
+CFLAGS += -Wall -g
 
-all: ${TARGET}
-
-.c.o:
-	${CC} ${CFLAGS} -c $<
+include ${SYSROOT}/lib/mk/defs.mk
 
 ${TARGET}: ${OBJS}
 	${CC} ${LIBS} -o $@ ${OBJS}
 
-clean:
-	rm -f ${OBJS} .depend ${TARGET}
-
-depend:
-	mkdep ${SRCS}
-
-test:
+include ${MAINMK}
