cleanup; remove java dependency from make infrastructure, which makes us add it here instead

--- a/src/gridfe/Makefile
+++ b/src/gridfe/Makefile
@@ -1,12 +1,12 @@
 # $Id$
 
-CLASSES += Page.class GridFE.class
-PRIVCLASSES += DelegationHandler.class NavigationMenu.class
-
 SYSROOT = ..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
+CLASSES += Page.class GridFE.class
+PRIVCLASSES += DelegationHandler.class NavigationMenu.class
 SUBDIRS += gridint
+TARGET = ${CLASSES}
 
 include ${MAINMK}
