--- a/src/gridfe/gridint/Makefile
+++ b/src/gridfe/gridint/Makefile
@@ -1,12 +1,12 @@
 # $Id$
 
-CLASSES += GridJobList.class GridJob.class GramInt.class GridInt.class
-CLASSES += RSLElement.class
-
 SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
+CLASSES += GridJobList.class GridJob.class GramInt.class GridInt.class
+CLASSES += RSLElement.class
 SUBDIRS += auth t
+TARGET = ${CLASSES}
 
 include ${MAINMK}
