--- a/src/gridfe/gridint/auth/Makefile
+++ b/src/gridfe/gridint/auth/Makefile
@@ -1,11 +1,11 @@
 # $Id$
 
-CLASSES += GlobusAuth.class GSSAuth.class KerbAuth.class X509Auth.class
-
 SYSROOT = ../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
+CLASSES += GlobusAuth.class GSSAuth.class KerbAuth.class X509Auth.class
 SUBDIRS = t
+TARGET = ${CLASSES}
 
 include ${MAINMK}
