--- a/src/gridfe/www/Makefile
+++ b/src/gridfe/www/Makefile
@@ -1,9 +1,10 @@
 # $Id$
 
-CLASSES += login.class logout.class
-
 SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
+
+CLASSES += login.class logout.class
+TARGET = ${CLASSES}
 
 include ${MAINMK}
