--- a/src/jasp/Makefile
+++ b/src/jasp/Makefile
@@ -1,12 +1,12 @@
 # $Id$
 
-CLASSES += Uid.class JASP.class BasicServices.class
-# PRIVCLASSES = Attribute.class
-
 SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
+CLASSES += Uid.class JASP.class BasicServices.class
+# PRIVCLASSES = Attribute.class
 SUBDIRS += t
+TARGET = ${CLASSES}
 
 include ${MAINMK}
