--- a/src/oof/filter/Makefile
+++ b/src/oof/filter/Makefile
@@ -1,9 +1,10 @@
 # $Id$
 
-CLASSES += Filter.class xhtml.class
-
 SYSROOT = ../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
+
+CLASSES += Filter.class xhtml.class
+TARGET = ${CLASSES}
 
 include ${MAINMK}
