--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -1,14 +1,20 @@
 # $Id$
 
 SYSROOT = ../..
-TARGET = mod_fum.so
-OBJS = mod_fum.o
-CFLAGS += -Wall
-LIBS = -lkrb5
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-${TARGET}: ${OBJS}
-	${CC} -shared -o $@ ${LIBS} ${OBJS}
+TARGET = mod_fum.so
+OBJS = mod_fum.o
+CFLAGS += -Wall -rdynamic -shared
+LIBS = -lkrb5
+TESTS += driver
+TESTENV = LD_LIBRARY_PATH=`pwd`
 
 include ${MAINMK}
+
+${TARGET}: ${OBJS}
+	${CC} -shared -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
+
+driver:
+	${CC} -Wall -fPIC -ldl driver.c -o $@
