--- a/src/oof/Makefile
+++ b/src/oof/Makefile
@@ -1,11 +1,11 @@
 # $Id$
 
-CLASSES += OOFBadElementFormException.class OOFException.class OOF.class
-
 SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
+CLASSES += OOFBadElementFormException.class OOFException.class OOF.class
 SUBDIRS += element filter t
+TARGET = ${CLASSES}
 
 include ${MAINMK}
