Added debug compile option

--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -6,7 +6,7 @@ include ${SYSROOT}/lib/mk/defs.mk
 
 TARGET = mod_fum.so
 OBJS = mod_fum.o
-CFLAGS += -Wall -rdynamic -shared
+CFLAGS += -Wall -rdynamic -shared -g
 LIBS = -lkrb5
 TESTS += driver
 TESTENV = LD_LIBRARY_PATH=`pwd`
@@ -14,7 +14,7 @@ TESTENV = LD_LIBRARY_PATH=`pwd`
 include ${MAINMK}
 
 ${TARGET}: ${OBJS}
-	${CC} -shared -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
+	${CC} -g -shared -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
 
 driver:
-	${CC} -Wall -fPIC -ldl driver.c -o $@
+	${CC} -Wall -g -fPIC -ldl driver.c -o $@
