add kx509 includes/libs; fixup CFLAGS wrt -g

--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -6,15 +6,16 @@ include ${SYSROOT}/lib/mk/defs.mk
 
 TARGET = mod_fum.so
 OBJS = mod_fum.o
-CFLAGS += -Wall -rdynamic -shared -g
-LIBS = -lkrb5
+CFLAGS += -Wall -rdynamic -shared -g -I${KX509_PREFIX}
+LIBS = -lkrb5 -lkx -L${KX509_PREFIX}
+
 TESTS += driver
 TESTENV = LD_LIBRARY_PATH=`pwd`
 
 include ${MAINMK}
 
 ${TARGET}: ${OBJS}
-	${CC} -g -shared -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
+	${CC} ${CFLAGS} -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
 
 driver:
 	${CC} -Wall -g -fPIC -ldl driver.c -o $@
