kx509 aspect fully implemented and working

--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -7,7 +7,7 @@ include ${SYSROOT}/lib/mk/defs.mk
 TARGET = mod_fum.so
 OBJS = mod_fum.o
 CFLAGS += -Wall -rdynamic -shared -g -I${KX509_PREFIX}
-LIBS = -lkrb5 -lkx -L${KX509_PREFIX}
+LIBS = -lcrypt -lcrypto -lkrb5 -lkx -L${KX509_PREFIX}
 
 TESTS += driver
 TESTENV = LD_LIBRARY_PATH=`pwd`
@@ -18,4 +18,4 @@ ${TARGET}: ${OBJS}
 	${CC} ${CFLAGS} -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
 
 driver:
-	${CC} -Wall -g -fPIC -ldl driver.c -o $@
+	${CC} ${LIBS} -Wall -g -fPIC -ldl driver.c -o $@
