--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -7,7 +7,7 @@ include ${SYSROOT}/lib/mk/defs.mk
 TARGET = mod_fum.so
 OBJS = mod_fum.o
 CFLAGS += -Wall -rdynamic -shared -g -I${KX509_PREFIX}
-LIBS = -lcrypt -lcrypto -lkrb5 -lkx -L${KX509_PREFIX}
+LIBS = -lcrypto -lkrb5 -lkx509 -L${KX509_PREFIX}
 
 TESTS += driver
 TESTENV = LD_LIBRARY_PATH=`pwd`
