--- a/src/gridfe/www/Makefile
+++ b/src/gridfe/www/Makefile
@@ -4,7 +4,7 @@ SYSROOT = ../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += login.class logout.class
+CLASSES += login.class logout.class index.class
 TARGET = ${CLASSES}
 
 include ${MAINMK}
