--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -4,16 +4,16 @@ SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-TARGET = mod_fum.so
-OBJS = mod_fum.o
-CFLAGS += -Wall -rdynamic -shared -g -I${KX509_PREFIX} -I/usr/include/httpd -I"/usr/include/apr-0"
+MODULE = mod_fum
+TARGET = ${MODULE}.so
+OBJS = ${MODULE}.o
+CFLAGS += -Wall -rdynamic -shared -g -I${KX509_PREFIX}
+CFLAGS += -I${HTTPD_PREFIX} -I${APR_PREFIX}
 LIBS = -lcrypto -lkrb5 -lkx509 -L${KX509_PREFIX}
+CLEAN = ${MODULE}.la ${MODULE}.la ${MODULE}.slo
 
 TESTS += driver
 TESTENV = LD_LIBRARY_PATH=`pwd`
-
-APXS = /usr/sbin/apxs
-APXSFLAGS = -i -a
 
 include ${MAINMK}
 
@@ -23,6 +23,5 @@ ${TARGET}: ${OBJS}
 driver:
 	${CC} ${LIBS} -Wall -g -fPIC -ldl driver.c -o $@
 
-module:
-	${APXS} -I${KX509_PREFIX} ${APXSFLAGS} -c mod_fum.c ${LIBS}
-
+install: ${TARGET}
+	${APXS} -i -a -I${KX509_PREFIX} ${APXSFLAGS} ${TARGET}
