remove KerbAuth.class and X509Auth.class

--- a/src/gridfe/gridint/auth/Makefile
+++ b/src/gridfe/gridint/auth/Makefile
@@ -4,7 +4,7 @@ SYSROOT = ../../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += GlobusAuth.class GSSAuth.class KerbAuth.class X509Auth.class
+CLASSES += GlobusAuth.class GSSAuth.class
 SUBDIRS = t
 TARGET = ${CLASSES}
 
