--- a/src/jasp/Makefile
+++ b/src/jasp/Makefile
@@ -5,7 +5,7 @@ SYSROOT = ../..
 include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += Uid.class JASP.class BasicServices.class
-# PRIVCLASSES = Attribute.class
+# CLEAN = Attribute.class
 SUBDIRS += t
 TARGET = ${CLASSES}
 
