clean up; factor out; fix install target; remove redundant shit

--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -4,26 +4,23 @@ SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-TARGET = mod_fum.so
-OBJS = mod_fum.o
-CFLAGS += -Wall -rdynamic -shared -g -I${KX509_PREFIX} -I/usr/include/httpd -I"/usr/include/apr-0"
-LIBS = -lcrypto -lkrb5 -lkx509 -L${KX509_PREFIX}
+MODULE = mod_fum
+TARGET = ${MODULE}.so
+OBJS = ${MODULE}.o
+CFLAGS += -Wall -g -I${KX509_PREFIX} -I${HTTPD_PREFIX} -I${APR_PREFIX}
+LIBS = -lcrypto -lkrb5 -L${KX509_PREFIX} -lkx509
+CLEAN = ${MODULE}.lo ${MODULE}.la ${MODULE}.slo .libs
 
 TESTS += driver
 TESTENV = LD_LIBRARY_PATH=`pwd`
 
-APXS = /usr/sbin/apxs
-APXS_FLAGS = -i -a
-APXS_SOURCE = mod_fum.c
-APSX_OBJS = mod_fum.o mod_fum.la mod_fum.lo mod_fum.slo
-
 include ${MAINMK}
 
 ${TARGET}: ${OBJS}
-	${CC} ${CFLAGS} -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
+	${CC} -rdynamic -shared ${CFLAGS} -Wl,-rpath,LIBDIR ${LIBS} -o $@ ${OBJS}
 
-install:
-	${APXS} -I${KX509_PREFIX} ${APXS_FLAGS} -c ${APXS_SOURCE} ${LIBS}
+install: ${TARGET}
+	${APXS} -i -a ${TARGET}
 
 driver:
-	${CC} ${LIBS} -Wall -g -fPIC -ldl driver.c -o $@
+	${CC} ${CFLAGS} ${LIBS} -fPIC -ldl driver.c -o $@
