Gass Server - Working on localhost, 1st implementation using GassInt.java

--- a/src/gridfe/gridint/Makefile
+++ b/src/gridfe/gridint/Makefile
@@ -5,7 +5,7 @@ SYSROOT = ../../..
 include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += GridJobList.class GridJob.class GramInt.class GridInt.class
-CLASSES += RSLElement.class
+CLASSES += RSLElement.class GassInt.class
 SUBDIRS += auth t
 TARGET = ${CLASSES}
 
