add notfound and nodes pages

--- a/src/gridfe/www/Makefile
+++ b/src/gridfe/www/Makefile
@@ -4,7 +4,8 @@ SYSROOT = ../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += login.class logout.class index.class
+CLASSES += login.class logout.class index.class nodes.class
+CLASSES += notfound.class
 TARGET = ${CLASSES}
 
 include ${MAINMK}
