add jobs and rls subdirs

--- a/src/gridfe/www/Makefile
+++ b/src/gridfe/www/Makefile
@@ -6,6 +6,7 @@ include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += login.class logout.class index.class nodes.class
 CLASSES += notfound.class
+SUBDIRS += jobs rls
 TARGET = ${CLASSES}
 
 include ${MAINMK}
