--- a/src/gridfe/www/rls/Makefile
+++ b/src/gridfe/www/rls/Makefile
@@ -4,7 +4,7 @@ SYSROOT = ../../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += search.class
+CLASSES += addcat.class addres.class rmcat.class search.class
 TARGET = ${CLASSES}
 
 include ${MAINMK}
