NavigationMenu renamed to just Menu

--- a/src/gridfe/Makefile
+++ b/src/gridfe/Makefile
@@ -5,7 +5,7 @@ SYSROOT = ../..
 include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += Page.class GridFE.class
-CLEAN += DelegationHandler.class NavigationMenu.class
+CLEAN += DelegationHandler.class Menu.class
 SUBDIRS += gridint www
 TARGET = ${CLASSES}
 
