--- a/src/gridfe/gridint/auth/Makefile
+++ b/src/gridfe/gridint/auth/Makefile
@@ -4,7 +4,7 @@ SYSROOT = ../../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += GlobusAuth.class GSSAuth.class
+CLASSES += GlobusAuth.class GSSAuth.class CertInfo.class
 SUBDIRS = t
 TARGET = ${CLASSES}
 
