add entity.class to CLEAN

--- a/src/jasp/Makefile
+++ b/src/jasp/Makefile
@@ -5,7 +5,8 @@ SYSROOT = ../..
 include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += Uid.class JASP.class BasicServices.class
-# CLEAN = Attribute.class
+CLEAN = entity.class
+# CLEAN += Attribute.class
 SUBDIRS += t
 TARGET = ${CLASSES}
 
