spacing; rewrite detection using a switch, it is simpler; note: it would be really nice if this worked again, because having a test that does not work is silly

--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -22,5 +22,5 @@ ${TARGET}: ${OBJS}
 install: ${TARGET}
 	${APXS} -i -a ${TARGET}
 
-driver:
+driver: driver.c
 	${CC} ${CFLAGS} ${LIBS} -fPIC -ldl driver.c -o $@
