--- a/tools/mod_fum/Makefile
+++ b/tools/mod_fum/Makefile
@@ -4,11 +4,14 @@ SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
+KRB_PREFIX = /usr/kerberos
+HTTPD_PREFIX = /usr/include/httpd
+
 MODULE = mod_fum
 TARGET = ${MODULE}.so
 OBJS = ${MODULE}.o
-CFLAGS += -Wall -g -I${KX509_PREFIX} -I${APR_PREFIX}
-LIBS = -lcrypto -lkrb5 -L${KX509_PREFIX} -lkx509
+CFLAGS += -Wall -g -I${KX509_PREFIX} -I${APR_PREFIX} -I${KRB_PREFIX}/include -I${HTTPD_PREFIX}
+LIBS = -lcrypto -L${KRB_PREFIX}/lib -lkrb5 -L${KX509_PREFIX} -lkx509
 CLEAN = ${MODULE}.lo ${MODULE}.la ${MODULE}.slo .libs
 
 TESTS += driver
