--- a/src/gridfe/gridint/Makefile
+++ b/src/gridfe/gridint/Makefile
@@ -5,7 +5,7 @@ SYSROOT = ../../..
 include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += JobList.class GridJob.class GramInt.class GridInt.class
-CLASSES += RSLElement.class GassInt.class
+CLASSES += RSLElement.class GassInt.class UserMap.class
 SUBDIRS += auth t
 TARGET = ${CLASSES}
 
