--- a/src/gridfe/gridint/Makefile
+++ b/src/gridfe/gridint/Makefile
@@ -8,5 +8,6 @@ CLASSES += JobList.class GridJob.class GramInt.class GridInt.class
 CLASSES += RSLElement.class GassInt.class UserMap.class
 SUBDIRS += auth t
 TARGET = ${CLASSES}
+CLEAN += DN.class
 
 include ${MAINMK}
