add cancel page

--- a/src/gridfe/www/jobs/Makefile
+++ b/src/gridfe/www/jobs/Makefile
@@ -4,8 +4,8 @@ SYSROOT = ../../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += index.class output.class remove.class status.class
-CLASSES += submit.class
+CLASSES += cancel.class index.class output.class remove.class
+CLASSES += status.class submit.class
 TARGET = ${CLASSES}
 
 include ${MAINMK}
