--- a/src/gridfe/gridint/Makefile
+++ b/src/gridfe/gridint/Makefile
@@ -6,6 +6,7 @@ include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += JobList.class GridJob.class GramInt.class GridInt.class
 CLASSES += RSLElement.class GassInt.class UserMap.class GridFTP.class
+CLASSES += GridFile.class
 SUBDIRS += auth t
 TARGET = ${CLASSES}
 CLEAN += DN.class
