--- a/src/gridfe/www/gridftp/Makefile
+++ b/src/gridfe/www/gridftp/Makefile
@@ -4,7 +4,7 @@ SYSROOT = ../../../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += index.class copy.class
+CLASSES += index.class copy.class browser.class
 TARGET = ${CLASSES}
 
 include ${MAINMK}
