add Bob's GetPWEnt class

--- a/src/jasp/Makefile
+++ b/src/jasp/Makefile
@@ -4,7 +4,7 @@ SYSROOT = ../..
 
 include ${SYSROOT}/lib/mk/defs.mk
 
-CLASSES += Uid.class JASP.class BasicServices.class
+CLASSES += Uid.class JASP.class BasicServices.class GetPWEnt.class
 CLEAN = entity.class
 # CLEAN += Attribute.class
 SUBDIRS += t
