--- a/tools/splunderd/Makefile
+++ b/tools/splunderd/Makefile
@@ -7,7 +7,7 @@ include ${SYSROOT}/lib/mk/defs.mk
 TARGET = splunderd
 OBJS = splunderd.o
 PREFIX = /usr/local
-LDFLAGS += -lcrypto -L${KRB_PREFIX}/lib -lkrb5 -lkx509
+LDFLAGS += -lcrypto -L${KRB_PREFIX}/lib -lkrb5
 
 include ${MAINMK}
 
