--- a/src/gridfe/www/Makefile
+++ b/src/gridfe/www/Makefile
@@ -5,7 +5,7 @@ SYSROOT = ../../..
 include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += certs.class index.class nodes.class notfound.class
-SUBDIRS += jobs rls gridftp junk
+SUBDIRS += gridftp jobs junk rls
 TARGET = ${CLASSES}
 
 include ${MAINMK}
