do not descend into rls

--- a/src/gridfe/www/Makefile
+++ b/src/gridfe/www/Makefile
@@ -5,7 +5,7 @@ SYSROOT = ../../..
 include ${SYSROOT}/lib/mk/defs.mk
 
 CLASSES += certs.class index.class nodes.class notfound.class
-SUBDIRS += gridftp jobs junk rls
+SUBDIRS += gridftp jobs junk
 TARGET = ${CLASSES}
 
 include ${MAINMK}
